plugins/kotlin/idea/tests/testData/checker/codeFragments/classHeaderWithTypeArguments.kt.fragment.k2
this.foo(<error descr="[ARGUMENT_TYPE_MISMATCH] Argument type mismatch: actual type is 'kotlin.String', but 'T (of class A<T>)' was expected.">"a"</error>)